--- a/m1-w3d2-unit-testing-exercises/Exercises.Tests/Exercises.Tests.csproj
+++ b/m1-w3d2-unit-testing-exercises/Exercises.Tests/Exercises.Tests.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WordCountTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Exercises\Exercises.csproj">
