--- a/m1-w3d3-inheritance-exercises/BankTellerExerciseTests/BankTellerExerciseTests.csproj
+++ b/m1-w3d3-inheritance-exercises/BankTellerExerciseTests/BankTellerExerciseTests.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Classes\UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -59,9 +60,7 @@
       <Name>BankTellerExercise</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Classes\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
