building inheritance exercise

--- a/m1-w3d3-inheritance-exercises/BankTellerExercise/BankTellerExercise.csproj
+++ b/m1-w3d3-inheritance-exercises/BankTellerExercise/BankTellerExercise.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Class1.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Classes\BankAccount.cs" />
+    <Compile Include="Classes\CheckingAccount.cs" />
+    <Compile Include="Classes\SavingsAccount.cs" />
+    <Compile Include="MainBankTeller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
