peanut butter spaghetti

--- a/m1-w3d3-inheritance-exercises/BankTellerExerciseTests/BankTellerExerciseTests.csproj
+++ b/m1-w3d3-inheritance-exercises/BankTellerExerciseTests/BankTellerExerciseTests.csproj
@@ -51,11 +51,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Classes\UnitTest1.cs" />
+    <Compile Include="Classes\BankAccountTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BankAccountTest.cs" />
-    <Compile Include="CheckingAccountTest.cs" />
-    <Compile Include="SavingsAccountTest.cs" />
+    <Compile Include="Classes\CheckingAccountTest.cs" />
+    <Compile Include="Classes\SavingsAccountTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BankTellerExercise\BankTellerExercise.csproj">
