adding customer class and tests

--- a/m1-w3d3-inheritance-exercises/BankTellerExercise/BankTellerExercise.csproj
+++ b/m1-w3d3-inheritance-exercises/BankTellerExercise/BankTellerExercise.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\BankAccount.cs" />
+    <Compile Include="Classes\BankCustomer.cs" />
     <Compile Include="Classes\CheckingAccount.cs" />
     <Compile Include="Classes\SavingsAccount.cs" />
     <Compile Include="MainBankTeller.cs" />
