--- a/m1-w3d3-inheritance-exercises/BankTellerExerciseTests/BankTellerExerciseTests.csproj
+++ b/m1-w3d3-inheritance-exercises/BankTellerExerciseTests/BankTellerExerciseTests.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Classes\BankAccountTest.cs" />
+    <Compile Include="Classes\BankCustomerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\CheckingAccountTest.cs" />
     <Compile Include="Classes\SavingsAccountTest.cs" />
