partial completion of QuizMaker

--- a/m1-w4d2-file-io-part1-exercises/QuizMaker/QuizMaker.csproj
+++ b/m1-w4d2-file-io-part1-exercises/QuizMaker/QuizMaker.csproj
@@ -49,6 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="QuizQA.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="QuizQA.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
