--- a/m1-w4d2-file-io-part1-exercises/QuizMaker/QuizMaker.csproj
+++ b/m1-w4d2-file-io-part1-exercises/QuizMaker/QuizMaker.csproj
@@ -43,9 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="QuizQA.cs" />
+    <Compile Include="QuizFileRead.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuizQuestion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
