finalizing M3W1D4 - trouble linking CSS, M3W1D5 pull

--- a/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/ViewsPart1.Exercises.csproj
+++ b/m3-w1d4-views-part1-exercises/ViewsPart1.Exercises/ViewsPart1.Exercises.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +107,8 @@
     <Content Include="packages.config" />
     <Content Include="Views\Home\FizzBuzz.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Fibonacci.cshtml" />
+    <Content Include="Views\Home\Echo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
