--- a/m3-w2d2-controllers-part1-exercises/GetExercises.Web/GetExercises.Web.csproj
+++ b/m3-w2d2-controllers-part1-exercises/GetExercises.Web/GetExercises.Web.csproj
@@ -142,6 +142,10 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Actor\Index.cshtml" />
+    <Content Include="Views\Film\Index.cshtml" />
+    <Content Include="Views\Actor\SearchResult.cshtml" />
+    <Content Include="Views\Film\SearchResult.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -151,9 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Actor\" />
     <Folder Include="Views\Customer\" />
-    <Folder Include="Views\Film\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
