troubleshoot sqlDatareader in CustomerDAL, breakpoint at line 48

--- a/m3-w2d2-controllers-part1-exercises/GetExercises.Web/GetExercises.Web.csproj
+++ b/m3-w2d2-controllers-part1-exercises/GetExercises.Web/GetExercises.Web.csproj
@@ -150,6 +150,8 @@
     <Content Include="Views\Film\Index.cshtml" />
     <Content Include="Views\Actor\SearchResult.cshtml" />
     <Content Include="Views\Film\SearchResult.cshtml" />
+    <Content Include="Views\Customer\SearchResult.cshtml" />
+    <Content Include="Views\Customer\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -159,7 +161,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Customer\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
