running behind, need to finish controllers part 1. Part 2 is untouched

--- a/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/Web.config
+++ b/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="squirrelReviews" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Squirrels;Trusted_Connection=Yes;"/>
+    <add name="squirrelReviews" connectionString="Data Source=.\SQLexpress;Initial Catalog=Squirrels;Integrated Security=True;"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
