m3W2D3 should be acceptable

--- a/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/FormsWithHttpPost.csproj
+++ b/m3-w2d3-controllers-part2-exercises/FormsWithHttpPost/FormsWithHttpPost.csproj
@@ -123,12 +123,12 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ReviewController.cs" />
     <Compile Include="DAL\IReviewDAL.cs" />
     <Compile Include="DAL\ReviewSqlDAL.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\NewReview.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -139,9 +139,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Review\PostReview.cshtml" />
-    <Content Include="Views\Review\Confirmation.cshtml" />
-    <Content Include="Views\Review\Index.cshtml" />
+    <Content Include="Views\Home\NewReview.cshtml" />
+    <Content Include="Views\Home\Confirmation.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
